content/static/css: make .JumpDialog's position fixed.
add `position:fixed;` to `.JumpDialog` class to always keep it on visible viewport even if the page is scrolled.
fixes golang/go#43840

GitHub-Last-Rev: 47879a522fbb601d6b8cc382f45e11b9e5615c8e
GitHub-Pull-Request: golang/pkgsite#21
Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/285674
Trust: Jonathan Amsterdam <jba@google.com>
Trust: Julie Qiu <julie@golang.org>

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -1587,6 +1587,7 @@ table.Directories {
 }
 
 .JumpDialog {
+  position: fixed;
   width: 25rem;
 }
 .JumpDialog-body {
